# src/controllers/auth.controller.ts
@@ -22,7 +22,19 @@ const registerValidateSchema = Yup.object({
   fullname: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(7, "Password must be at least 7 characters")
+    .test("at-least-one-uppercase", "Password must contain at least one uppercase letter", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*[A-Z])/;
+      return regex.test(value);
+    })
+    .test("at-least-one-number", "Password must contain at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), "", "Password must be match"]),
@@ -30,6 +42,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     */
     const { fullname, username, email, password, confirmPassword } = req.body as unknown as TRegister;
 
     try {
@@ -54,11 +69,12 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+       #swagger.tags = ['Auth']
        #swagger.requestBody = {
        required: true,
        schema: {$ref: "#/components/schemas/LoginRequest"}
        }
-       */
+    */
     const { identifier, password } = req.body as unknown as TLogin;
     try {
       // ambil data user berdasarkan identifier -> email & username
@@ -71,6 +87,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
       if (!userByIdentifier) {
         return res.status(404).json({ message: "User not found", data: null });
@@ -99,6 +116,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+      #swagger.tags = ['Auth']
       #swagger.security = {
         "bearerAuth": []
       }
@@ -110,6 +128,29 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({ message: err.message, data: null });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/ActivationRequest"}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOne({ activationCode: code, isActive: true, new: true });
+
+      res.status(200).json({
+        message: "Success get user profile",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
