# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendEmail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User {
   fullname: string;
@@ -10,6 +12,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -17,8 +20,8 @@ const Schema = mongoose.Schema;
 const UserSchema = new Schema<User>(
   {
     fullname: { type: Schema.Types.String, required: true },
-    username: { type: Schema.Types.String, required: true },
-    email: { type: Schema.Types.String, required: true },
+    username: { type: Schema.Types.String, required: true, unique: true },
+    email: { type: Schema.Types.String, required: true, unique: true },
     password: { type: Schema.Types.String, required: true },
     role: { type: Schema.Types.String, enum: ["admin", "user"], default: "user" },
     profilePicture: { type: Schema.Types.String, default: "user.jpg" },
@@ -29,8 +32,36 @@ const UserSchema = new Schema<User>(
 );
 
 UserSchema.pre("save", function (next) {
-  this.password = encrypt(this.password);
+  const user = this;
+  user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
   next();
+});
+
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+    console.log("Send Email to: ", user.email);
+
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullname: user.fullname,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+
+    await sendEmail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Activation your account",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log("Error > ", error);
+  } finally {
+    next();
+  }
 });
 
 UserSchema.methods.toJSON = function () {
